changing profile picture to display correctly on mobile interfaces

--- a/less/grayscale.less
+++ b/less/grayscale.less
@@ -365,6 +365,9 @@ body {
 .experience-section h5{
     text-align: left;
 }
+.profile-img{
+    width:100%;
+}
 .profile-img-title{
     font-size: 16px;
     text-decoration: underline;    
